# realworldocaml

./: .gitignore  README.md  dune-project  flake.nix  realworldocaml.opam
chapter_01/sum/: dune  sum.ml
chapter_03/ls_rec/: dune  ls_rec.ml
chapter_03/render_table/: dune  render_table.ml
chapter_04/freq/: counter.mli  dune  freq.ml
chapter_05/unix_services/: dune  unix_services.ml
chapter_06/boolang/: boolang.ml  dune
chapter_06/terminal_color/: dune  terminal_color.ml
chapter_19/json_parser/: dune  json.ml  json_parser.ml  lexer.mll  parser.mly  test.json
